# calendar_alarm_clock

./: .gitignore  README.md  config_manager.py  event.py  example.config  ical_manager.py  log_config.py  requirements.txt  scheduler.py  scheduler_python.py  scheduler_python_client.py  setup.bat  setup.sh  sqlManager.py  test_scenarios.md  test_scheduler.py  ulticlock.py
notification_server/: client.py  requirements.txt  server.py  setup.bat  test_notification.py
plugins/: base_plugin.py  plugin_manager.py
plugins/windows_notification/: config.json  plugin.py
services/: calendar_sync_service.py
unused/: scheduler.py  scheduler_cron.py
unused/cpp_version/: CMakeLists.txt
unused/cpp_version/include/: alarm_client.hpp  config_manager.hpp  ical_manager.hpp  sql_manager.hpp  test_scheduler.hpp
unused/cpp_version/src/: alarm_client.cpp  alarm_scheduler.cpp  config_manager.cpp  ical_manager.cpp  main.cpp  sql_manager.cpp  test_scheduler.cpp
